[tool.poetry]
name = "ly-python-tools"
version = "0.1.0"
description = ""
authors = ["Liam Damewood <liam@leapyear.io>"]

[tool.poetry.scripts]
autoupgrade = "ly_python_tools.autoupgrade:main"
lint = "ly_python_tools.lint:main"

[tool.poetry.dependencies]
python = "^3.7"
black = { version = "^22.1.0", optional = true }
click = "^8.0.4"
flake8 = { version = "^4.0.1", optional = true }
isort = { version = "^5.10.1", optional = true }
prospector = {version = "^1.7.7", optional = true }
pyright = { version = "^1.1.230", optional = true }
pyupgrade = { version = "^2.31.1", optional = true }
toml = "^0.10.2"
flake8-print = {version = "^4.0.0", optional = true}

[tool.poetry.extras]
all = ["black", "isort", "pyupgrade", "prospector", "pyright"]
black = ["black"]
flake8 = ["flake8", "flake8-print"]
isort = ["isort"]
prospector = ["prospector"]
pyright = ["pyright"]
pyupgrade = ["pyupgrade"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.17.0"

[tool.lint]
include = '\.py$'
pyupgrade = { options=["--py37-plus"] }
pyright = { options=["--pythonversion", "3.7"] }

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = "true"
filter_files = true
profile = "black"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
include = ["src", "tests"]
exclude = ["**/__pycache__",
    "dist",
    "**/.ipynb_checkpoints"
]
pythonVersion = "3.7"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
