[tool.poetry]
name = "ly-python-tools"
version = "0.1.1"
description = ""
authors = ["Liam Damewood <liam@leapyear.io>"]

[tool.poetry.scripts]
autoupgrade = "ly_python_tools.autoupgrade:main"
lint = "ly_python_tools.lint:main"

[tool.poetry.dependencies]
python = "^3.7"
black = "^22.1.0"
click = "^8.0.4"
flake8 = { version = "^4.0.1", optional = true }
flake8-print = {version = "^4.0.0", optional = true}
isort = "^5.10.1"
prospector = {version = "^1.7.7", optional = true }
pyright = "^1.1.231"
pyupgrade = "^2.31.1"
toml = "^0.10.2"

[tool.poetry.extras]
flake8 = ["flake8", "flake8-print"]
prospector = ["prospector"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
behave = "^1.2.6"

[tool.lint]
include = '\.py$'
pyupgrade = { options=["--py37-plus"] }
pyright = { options=["--pythonversion", "3.7"] }

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = "true"
filter_files = true
profile = "black"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
include = ["src", "tests"]
exclude = ["**/__pycache__",
    "dist",
    "**/.ipynb_checkpoints"
]
pythonVersion = "3.7"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
minversion = "7.1.0"
addopts = "-ra -v --cov-report=xml --cov-context=test --cov-branch"
junit_family = "xunit2"
junit_suite_name = "ly_python_tools"
testpaths = [
        "tests"
    ]
xfail_strict=true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
